# ldoce5viewer

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ldoce5viewer.spec  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
ldoce5viewer/: __init__.py  fulltext.py  incremental.py
ldoce5viewer-tui/: .gitignore  Cargo.toml
ldoce5viewer-tui/src/: app.rs  config.rs  lib.rs  main.rs
ldoce5viewer-tui/src/audio/: mod.rs  player.rs
ldoce5viewer-tui/src/content/: mod.rs  transform.rs  types.rs
ldoce5viewer-tui/src/data/: cdb.rs  idm_reader.rs  mod.rs
ldoce5viewer-tui/src/images/: mod.rs  renderer.rs
ldoce5viewer-tui/src/search/: fulltext.rs  incremental.rs  mod.rs
ldoce5viewer-tui/src/ui/: advanced_search.rs  content_view.rs  layout.rs  mod.rs  result_list.rs  search_pane.rs  status_bar.rs
ldoce5viewer-tui/tests/: test_app.rs  test_cdb.rs  test_fulltext.rs  test_incremental.rs  test_transform.rs
ldoce5viewer/ldoce5/: __init__.py  advtree.py  extract.py  filemap.py  idmreader.py  transform.py  transform_body.py
ldoce5viewer/qtgui/: __init__.py  access.py  advanced.py  asyncfts.py  config.py  indexer.py  main.py
ldoce5viewer/qtgui/resources/: __init__.py  resource.qrc
ldoce5viewer/qtgui/resources/icons/: icongen.py
ldoce5viewer/qtgui/ui/: __init__.py  advanced.py  custom.py  indexer.py  main.py
ldoce5viewer/qtgui/utils/: __init__.py  error.py  fontfallback.py  singleapp.py
ldoce5viewer/static/styles/: about.css  activator.css  collocations.css  colorbox.css  common.css  entry.css  etymologies.css  search.css
ldoce5viewer/utils/: cdb.py  compat.py  text.py
tests/: test_cdb.py  test_fulltext.py  test_incremental.py
